// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Report can display buttons for viewing and removing the report 1`] = `
<span>
  <span
    className="sc-htpNat ehDjhI"
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Roboto\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 700,
        }
      }
    >
      <span
        className="sc-EHOje cmrrca"
      >
        Weekly Sync Report
      </span>
    </span>
    <span
      className="sc-bxivhb hRMay"
    >
      <button
        className="sc-bdVaJa eTEyQW"
        onClick={[Function]}
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          View report
        </span>
      </button>
      <span
        style={
          Object {
            "borderLeft": "1px solid #dadada",
            "margin": "0 .75rem",
            "width": "1px",
          }
        }
      />
      <button
        className="sc-ifAKCX khueld sc-bdVaJa eTEyQW"
        onClick={[Function]}
      >
        <svg
          height="100%"
          style={
            Object {
              "fill": "#ff1e1e",
              "height": "1rem",
              "width": "1rem",
            }
          }
          version="1.1"
          viewBox="0 0 16 16"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            className="torchRed"
          >
            <path
              d="M7,9 L1.00292933,9 C0.449026756,9 -8.8817842e-16,8.55613518 -8.8817842e-16,8 L-8.8817842e-16,8 C-8.8817842e-16,7.44771525 0.437881351,7 1.00292933,7 L7,7 L7,1.00292933 C7,0.449026756 7.44386482,0 8,0 L8,0 C8.55228475,0 9,0.437881351 9,1.00292933 L9,7 L14.9970707,7 C15.5509732,7 16,7.44386482 16,8 L16,8 C16,8.55228475 15.5621186,9 14.9970707,9 L9,9 L9,14.9970707 C9,15.5509732 8.55613518,16 8,16 L8,16 C7.44771525,16 7,15.5621186 7,14.9970707 L7,9 Z"
              transform="translate(8.000000, 8.000000) rotate(-315.000000) translate(-8.000000, -8.000000)"
            />
          </g>
        </svg>
      </button>
    </span>
  </span>
</span>
`;

exports[`Snapshots Report renders the report 1`] = `
<span>
  <li
    className="sc-gzVnrw fCsohM"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="sc-htpNat ehDjhI"
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 700,
          }
        }
      >
        <span
          className="sc-EHOje cmrrca"
        >
          Weekly Sync Report
        </span>
      </span>
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        <span
          className="sc-bZQynM eUosDx"
        >
          October 10, 2017
        </span>
      </span>
    </span>
  </li>
</span>
`;

exports[`Snapshots ReportList loading state 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Roboto\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Loading...
  </span>
</span>
`;

exports[`Snapshots ReportList renders the reports collection in a list 1`] = `
<span>
  <ol
    className="sc-htoDjs cysWFd"
  >
    <li
      className="sc-gzVnrw fCsohM"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="sc-htpNat ehDjhI"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-EHOje cmrrca"
          >
            Weekly Sync Report
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-bZQynM eUosDx"
          >
            November 7, 2017
          </span>
        </span>
      </span>
    </li>
    <li
      className="sc-gzVnrw fCsohM"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="sc-htpNat ehDjhI"
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          <span
            className="sc-EHOje cmrrca"
          >
            Client Social Media Campaign
          </span>
        </span>
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span
            className="sc-bZQynM eUosDx"
          >
            October 10, 2017
          </span>
        </span>
      </span>
    </li>
  </ol>
</span>
`;
